# ifood_tlc_engineering_case

./: .gitignore  Makefile  README.md  create_bucket.py  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: dag.py
src/tlc_pipeline/: bronze_layer.py  config.py  main.py  silver_layer.py  validate.py
src/tlc_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tlc_pipeline/raw_ingestion/: de_para.py  normalize_schema.py  write_to_raw_bucket.py
src/tlc_pipeline/sql/: analise_pyspark.py  create_table_hive.sql
src/tlc_pipeline/tests/: test_main.py  test_silver_layer.py
src/tlc_pipeline/tlc_pipeline.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/tlc_pipeline/utils/: helpers.py  logging_config.py  scrap_tlc_parquets.py
tests/: test_bronze_layer.py  test_silver_layer.py
