[project]
name = "tlc_pipeline"
version = "0.0.1"
authors = [{ name="Debora", email="deboraellenss2@gmail.com" }]
description = "Integrar registros de viagens de táxi da cidade de Nova York de janeiro a maio de 2023 no ifood Data Lake"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyspark==3.4.1",
    "great_expectations>=0.16.8,<0.18.0",
    "boto3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pip-tools"
]

[tool.setuptools.packages.find]
where = ["src/tlc_pipeline"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"